improve: At least one function has been implemented. #0

--- a/html/options.html
+++ b/html/options.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script src="/js/jquery-3.6.1.slim.min.js"></script>
     <script src="/js/bootstrap.bundle.min.js"></script>
     <link href="/css/bootstrap.min.css" rel="stylesheet">
 
@@ -16,53 +15,53 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class=" container">
         <div class="row pt-5">
             <h5 data-i18n="download_file_type"></h5>
             <select class="form-select" aria-label="Default select example">
-                <option value="pl" data-i18n="plaintext_log" selected></option>
-                <option value="ms" data-i18n="markdown_summary"></option>
-                <option value="hs" data-i18n="html_summary"></option>
+                <option value="plainText" data-i18n="plaintext_log" selected></option>
+                <option value="markdownTable" data-i18n="markdown_summary"></option>
+                <option value="htmlTable" data-i18n="html_summary"></option>
             </select>
         </div>
 
         <div class="row pt-5">
             <h5 data-i18n="shortcut_items_title"></h5>
             <div class="input-group mb-3">
-                <span class="input-group-text">Alt+Shift+1</span>
-                <input type="text" class="form-control" data-i18n="alt_shift_1">
+                <span class="input-group-text">1</span>
+                <input type="text" class="form-control" data-i18n="shortcut_1">
             </div>
             <div class="input-group mb-3">
-                <span class="input-group-text">Alt+Shift+2</span>
-                <input type="text" class="form-control" data-i18n="alt_shift_2">
+                <span class="input-group-text">2</span>
+                <input type="text" class="form-control" data-i18n="shortcut_2">
             </div>
             <div class="input-group mb-3">
-                <span class="input-group-text">Alt+Shift+3</span>
-                <input type="text" class="form-control" data-i18n="alt_shift_3">
+                <span class="input-group-text">3</span>
+                <input type="text" class="form-control" data-i18n="shortcut_3">
             </div>
             <div class="input-group mb-3">
-                <span class="input-group-text">Alt+Shift+4</span>
-                <input type="text" class="form-control" data-i18n="alt_shift_4">
+                <span class="input-group-text">4</span>
+                <input type="text" class="form-control" data-i18n="shortcut_4">
             </div>
             <div class="input-group mb-3">
-                <span class="input-group-text">Alt+Shift+5</span>
-                <input type="text" class="form-control" data-i18n="alt_shift_5">
+                <span class="input-group-text">5</span>
+                <input type="text" class="form-control" data-i18n="shortcut_5">
             </div>
             <div class="input-group mb-3">
-                <span class="input-group-text">Alt+Shift+6</span>
-                <input type="text" class="form-control" data-i18n="alt_shift_6">
+                <span class="input-group-text">6</span>
+                <input type="text" class="form-control" data-i18n="shortcut_6">
             </div>
             <div class="input-group mb-3">
-                <span class="input-group-text">Alt+Shift+7</span>
-                <input type="text" class="form-control" data-i18n="alt_shift_7">
+                <span class="input-group-text">7</span>
+                <input type="text" class="form-control" data-i18n="shortcut_7">
             </div>
             <div class="input-group mb-3">
-                <span class="input-group-text">Alt+Shift+8</span>
-                <input type="text" class="form-control" data-i18n="alt_shift_8">
+                <span class="input-group-text">8</span>
+                <input type="text" class="form-control" data-i18n="shortcut_8">
             </div>
             <div class="input-group mb-3">
-                <span class="input-group-text">Alt+Shift+9</span>
-                <input type="text" class="form-control" data-i18n="alt_shift_9">
+                <span class="input-group-text">9</span>
+                <input type="text" class="form-control" data-i18n="shortcut_9">
             </div>
         </div>
 
