--- a/html/popup.html
+++ b/html/popup.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <script src="/js/bootstrap.bundle.min.js"></script>
+    <script src="/js/lib/bootstrap.bundle.min.js"></script>
     <link href="/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/popup.css" rel="stylesheet">
 
