improve: Refactoring and changing the download format

--- a/html/popup.html
+++ b/html/popup.html
@@ -23,39 +23,39 @@
         <div class="row">
             <div class="input-group input-group-sm pt-2">
                 <span class="input-group-text">1</span>
-                <label class="form-control" data-i18n="shortcut_1">
+                <label class="form-control" data-i18n="shortcut_1" data-shortcut-key="1">
             </div>
             <div class="input-group input-group-sm pt-2">
                 <span class="input-group-text">2</span>
-                <label class="form-control" data-i18n="shortcut_2">
+                <label class="form-control" data-i18n="shortcut_2" data-shortcut-key="2">
             </div>
             <div class="input-group input-group-sm pt-2">
                 <span class="input-group-text">3</span>
-                <label class="form-control" data-i18n="shortcut_3">
+                <label class="form-control" data-i18n="shortcut_3" data-shortcut-key="3">
             </div>
             <div class="input-group input-group-sm pt-2">
                 <span class="input-group-text">4</span>
-                <label class="form-control" data-i18n="shortcut_4">
+                <label class="form-control" data-i18n="shortcut_4" data-shortcut-key="4">
             </div>
             <div class="input-group input-group-sm pt-2">
                 <span class="input-group-text">5</span>
-                <label class="form-control" data-i18n="shortcut_5">
+                <label class="form-control" data-i18n="shortcut_5" data-shortcut-key="5">
             </div>
             <div class="input-group input-group-sm pt-2">
                 <span class="input-group-text">6</span>
-                <label class="form-control" data-i18n="shortcut_6">
+                <label class="form-control" data-i18n="shortcut_6" data-shortcut-key="6">
             </div>
             <div class="input-group input-group-sm pt-2">
                 <span class="input-group-text">7</span>
-                <label class="form-control" data-i18n="shortcut_7">
+                <label class="form-control" data-i18n="shortcut_7" data-shortcut-key="7">
             </div>
             <div class="input-group input-group-sm pt-2">
                 <span class="input-group-text">8</span>
-                <label class="form-control" data-i18n="shortcut_8">
+                <label class="form-control" data-i18n="shortcut_8" data-shortcut-key="8">
             </div>
             <div class="input-group input-group-sm pt-2">
                 <span class="input-group-text">9</span>
-                <label class="form-control" data-i18n="shortcut_9">
+                <label class="form-control" data-i18n="shortcut_9" data-shortcut-key="9">
             </div>
             <div class="input-group input-group-sm pt-2">
                 <span class="input-group-text">0</span>
