improve: Rounding time units can be selected. close #6

--- a/html/options.html
+++ b/html/options.html
@@ -17,11 +17,14 @@
 <body>
     <div class=" container">
         <div class="row pt-5">
-            <h5 data-i18n="download_file_type"></h5>
-            <select class="form-select" aria-label="Default select example">
-                <option value="plainText" data-i18n="plaintext_log" selected></option>
-                <option value="markdownTable" data-i18n="markdown_summary"></option>
-                <option value="htmlTable" data-i18n="html_summary"></option>
+            <h5 data-i18n="rounding_unit"></h5>
+            <select class="form-select">
+                <option value="1" data-i18n="1min" selected></option>
+                <option value="5" data-i18n="5min"></option>
+                <option value="10" data-i18n="10min"></option>
+                <option value="15" data-i18n="15min"></option>
+                <option value="30" data-i18n="30min"></option>
+                <option value="60" data-i18n="60min"></option>
             </select>
         </div>
 
