refactor: Refactored Japanese and storage API calls.

--- a/html/popup.html
+++ b/html/popup.html
@@ -10,7 +10,7 @@
     <link href="/css/popup.css" rel="stylesheet">
 
     <script src="/js/popup.js" type="module"></script>
-    <title data-i18n="popup_titie"></title>
+    <title data-i18n="popup_title"></title>
 </head>
 
 <body class="dc6a3b0594269eefaeb">
